# spmfilter-spamassassin

./: .hgignore  CMakeLists.txt  INSTALL  README
man/: CMakeLists.txt  smf-spamctl.1  smf-spamq.1  spmfilter-spamassassin.1
src/: CMakeLists.txt  config.h.cmake  liberator.c  liberator.h  main.c  main.h  spamctl.c  spamq.c
